--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"jquery": "^2.1.4",
 		"page": "^1.6.4",
 		"qs": "^6.0.0",
-		"serve": "^1.4.0"
+		"serve": "^1.4.0",
+		"sweetalert2": "^7.26.12"
 	},
 	"devDependencies": {
 		"babel-preset-es2015": "^6.24.1",
